# plain-data

./: .gitignore  README.md  _quarto.yml  about.qmd  hello.py  index.qmd  pyproject.toml
.quarto/idx/: about.qmd.json  index.qmd.json
.quarto/idx/posts/post-with-code/: index.qmd.json
.quarto/idx/posts/welcome/: index.qmd.json
.quarto/xref/: 29a81768  5c938421  INDEX
_freeze/posts/2025-05-14-tidy-pymc/index/execute-results/: html.json
_freeze/posts/2025-05-31-reticulate-pymc/index/execute-results/: html.json
_freeze/posts/2026-02-20-pymc-bart-baseball/index/execute-results/: html.json
_freeze/posts/post-with-code/index/execute-results/: html.json
_site/: about.html  index.html  listings.json  search.json
_site/posts/2025-05-14-tidy-pymc/: index.html
_site/posts/2025-05-31-reticulate-pymc/: index.html
_site/posts/20250514-pymc-gog/: index.html
_site/posts/20250531-reticulate-pymc/: index.html
_site/posts/2026-01-06-statistical-rethinking/: index.html
_site/posts/2026-02-20-pymc-bart-baseball/: index.html
_site/posts/post-with-code/: index.html
_site/posts/welcome/: index.html
posts/2025-05-14-tidy-pymc/: index.qmd
posts/2025-05-31-reticulate-pymc/: index.qmd
posts/2026-01-06-statistical-rethinking/: index.qmd
posts/2026-02-20-pymc-bart-baseball/: .gitignore  index.qmd  pyproject.toml
posts/post-with-code/: index.qmd
