[project]
name = "plain-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bambi>=0.15.0",
    "jupyter>=1.1.1",
    "plotnine>=0.14.5",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "pymc>=5.22.0",
    "tables>=3.10.2",
]
