[project]
name = "pymc-bart-baseball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.38.1",
    "pybaseball>=2.2.7",
    "pymc-bart>=0.11.0",
    "pymc>=5.27.1",
    "scikit-learn>=1.8.0",
    "plotnine>=0.15.3",
    "bayestidy",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
bayestidy = { git = "https://github.com/rplain1/bayestidy" }
